2007-08-21  Ales Hakl  <ales at hakl dot net>

	* src/parse.c (tokenizer_process): ignore shebang

	* lib/unix.c (native_gettimeofday): gettimeofday(2)

	* src/promise.c (dfsch_force_promise): more MT-safe promises

2007-08-18  Ales Hakl  <ales at hakl dot net>

	* lib/unix.c (dir_type): support for directory streams

2007-08-17  Ales Hakl  <ales at hakl dot net>

	* dfsch/lib/regex.h: Documentation comments

2007-08-13  Ales Hakl  <ales at hakl dot net>

	* lib/load.c (dfsch_load): fixed path searching logic.

2007-08-12  Ales Hakl  <ales at hakl dot net>

	* lib/load.c: provide/require mechanism

2007-08-08  Ales Hakl  <ales at hakl dot net>

	* src/object.c: unified exceptions to not-a-class-instance

2007-08-01  Ales Hakl  <ales at hakl dot net>

	* src/parse.c (dispatch_string): ignore escaped newlines

2007-07-29  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_zip): zip function (transposition of nested lists)

	* src/format.c: simple future-proof format implementation,
	currently supporting ~a, ~s and ~*

2007-07-24  Ales Hakl  <ales at hakl dot net>

	* src/pprint.c: placeholder for future pretty printer
	implementation

	* Makefile.am (nobase_include_HEADERS): added weak.h to installed
	headers
	(nobase_include_HEADERS): added lib/unix.h to installed headersd

2007-07-17  Ales Hakl  <ales at hakl dot net>

	* src/object.c: more class acessors for runtime class
	modification.

2007-07-15  Ales Hakl  <ales at hakl dot net>

	* src/object.c: <object> and <delegator> caches for C code.
	(dfsch_object_define_class): helper function for subclasing

	* dfsch/dfsch.h (DFSCH_OBJECT_CACHE): generalized symbol and
	object caching

	* src/hash.c (dfsch_hash_unset): FIXED: now works even for buckets
	that would become empty.
	(dfsch_hash_set_if_exists): hash-set-if-exists! now returns
	boolean value (most code is not affected in any way by this
	change)

	* src/dfsch.c (dfsch_unset): function for unsetting variables in
	environments.
